--- a/src/styles/components/_slogan.scss
+++ b/src/styles/components/_slogan.scss
@@ -58,7 +58,6 @@
 
   &__btn {
     margin-top: 8px;
-    margin-bottom: 28px;
   }
 
   @media (max-width: $xl-breakpoint) {
@@ -70,7 +69,6 @@
     }
 
     &__text {
-      margin-bottom: 20px;
       text-align: center;
     }
 
