--- a/src/styles/components/_vacancies.scss
+++ b/src/styles/components/_vacancies.scss
@@ -15,6 +15,10 @@
     width: 100%;
     margin-top: 63px;
     text-align: center;
+
+    @media (max-width: $lg-breakpoint) {
+      margin-top: 43px;
+    }
   }
 
   &__item {
@@ -112,10 +116,6 @@
   }
 
   @media (max-width: $lg-breakpoint) {
-    padding: 47px 20px;
-  }
-
-  @media (max-width: $sm-breakpoint) {
     padding: 47px 20px;
   }
 }
